--- a/index.html
+++ b/index.html
@@ -56,23 +56,23 @@
 
   <form id="letterForm">
     <label for="date">Date Received:</label>
-    <input type="date" id="date" required>
+    <input type="date" id="date" name="date" required>
 
     <label for="from">From (Sender):</label>
-    <input type="text" id="from" required>
+    <input type="text" id="from" name="from" required>
 
     <label for="subject">Subject:</label>
-    <input type="text" id="subject" required>
+    <input type="text" id="subject" name="subject" required>
 
     <label for="status">Status:</label>
-    <select id="status" required>
+    <select id="status" name="status" required>
       <option value="Pending">Pending</option>
       <option value="In Progress">In Progress</option>
       <option value="Completed">Completed</option>
     </select>
 
     <label for="action">Action Taken:</label>
-    <textarea id="action" rows="3" placeholder="Enter any action or remarks..."></textarea>
+    <textarea id="action" name="action" rows="3" placeholder="Enter any action or remarks..."></textarea>
 
     <button type="submit">Submit Letter</button>
   </form>
@@ -83,20 +83,11 @@
     form.addEventListener("submit", function (e) {
       e.preventDefault();
 
-      const letter = {
-        date: document.getElementById("date").value,
-        from: document.getElementById("from").value,
-        subject: document.getElementById("subject").value,
-        status: document.getElementById("status").value,
-        action: document.getElementById("action").value.trim()
-      };
+      const formData = new FormData(form);
 
       fetch("https://script.google.com/macros/s/AKfycby1fYoNKZtRvEe0pZFJ_YRyNhHBFkn6ZocuMETxVBQPqthNL1TrEb1G_8md0fD3eYSu/exec", {
         method: "POST",
-        body: JSON.stringify(letter),
-        headers: {
-          "Content-Type": "application/json"
-        }
+        body: formData
       })
       .then(response => response.text())
       .then(msg => {
@@ -110,4 +101,5 @@
   </script>
 </body>
 </html>
+
           
